Mon Mar 20 21:56:38 CET 2006 (acab)
-----------------------------------
  * libclamav/fsg.c: fix wrong write size calculation (reported by Andrey J.
  				Melnikoff (TEMHOTA) <temnota*kmv.ru>)

Sun Mar 19 21:49:19 CET 2006 (tk)
---------------------------------
  * freshclam: fix support for LocalIPAddress (patch by Anton Yuzhaninov
	       <citrin*citrin.ru>)

Tue Mar 14 11:40:49 GMT 2006 (njh)
----------------------------------
  * libclamav/tnef.c:	Check fseeks will work before calling fseek
				(requirement by TK)

Sat Mar 11 15:54:42 GMT 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Handle files with consecutive 'endobj' statements,
				reported by by Andy Fiddaman <clam*fiddaman.net>
			Only scan files embedded more than once one time.

Sat Mar 11 15:23:20 CET 2006 (tk)
---------------------------------
  * libclamav/sis.c: improve support for multi-language files

Fri Mar 10 16:08:25 CET 2006 (tk)
---------------------------------
  * libclamav/matcher.c: properly handle partial reads in cli_scandesc()

Wed Mar  8 16:05:44 GMT 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Fix potential DoS discovered in Vector Data Adobe
				Photoshop 7.0 files by Andy Fiddaman
				<clam*fiddaman.net>

Wed Mar  8 14:25:14 CET 2006 (tk)
---------------------------------
  * freshclam/manager.c: if possible, use percent idicator instead of rotor
			 Patch by Robert Hogan <robert*roberthogan.net>

Tue Mar  7 19:56:58 CET 2006 (tk)
---------------------------------
  * shared/cfgparser.c: strip newlines from FULLSTR args

Tue Mar  7 11:04:37 CET 2006 (tk)
---------------------------------
  * libclamav/zziplib: fix compiler warnings (patch by Stephen Gran)

Wed Feb 15 01:39:12 CET 2006 (tk)
---------------------------------
  * libclamav: simplify internal function declarations by passing a context
	       structure. Patch by Andrey J. Melnikoff (TEMHOTA)
	       <temnota*kmv.ru>

Thu Feb  9 21:42:22 GMT 2006 (njh)