@@ -38,7 +38,7 @@ Load virus database from FILE or load all virus database files from DIR.
 Save scan report to FILE.
 .TP 
 \fB\-\-tempdir=DIRECTORY\fR
-Create temporary files in DIRECTORY. Directory must be writeable for the 'clamav' user or unprivileged user running clamscan.
+Create temporary files in DIRECTORY. Directory must be writable for the 'clamav' user or unprivileged user running clamscan.
 .TP 
 \fB\-\-leave\-temps\fR
 Do not remove temporary files.
@@ -65,7 +65,7 @@ Only print infected files.
 Remove infected files. \fBBe careful.\fR
 .TP 
 \fB\-\-move=DIRECTORY\fR
-Move infected files into DIRECTORY. Directory must be writeable for the 'clamav' user or unprivileged user running clamscan.
+Move infected files into DIRECTORY. Directory must be writable for the 'clamav' user or unprivileged user running clamscan.
 .TP 
 \fB\-\-no\-mail\fR
 Disable scanning of mail files.
@@ -191,7 +191,7 @@ Note: some return codes may only appear in a one file mode (clamscan is started 
 .TP 
 57: Can't get absolute path name of current working directory.
 .TP 
-58: I/O error, please check your filesystem.
+58: I/O error, please check your file system.
 .TP 
 59: Can't get information about current user from /etc/passwd.
 .TP 
